# Group29

./: .gitignore
builder/: linear_regression.py  logistic_regression.py
models/: linear_regression.onnx
onnx_interpreter/: Cargo.toml  build.rs
onnx_interpreter/logs/: linear_regression.txt  mnist-12.txt  shufflenet-v2-12.txt
onnx_interpreter/src/: array.rs  attribute.rs  file.rs  input_for_mnist.rs  interpreter.rs  lib.rs  main.rs  operations.rs  structures.rs  utils.rs
onnx_interpreter/src/onnx/: onnx-data.proto  onnx-data.proto3
