[package]
name = "onnx_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
ndarray =  { version = "0.15.6", features = ["rayon"] }
num-traits = "0.2"
onnx = "0.1.0"
rand = "0.8.5"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"

[build-dependencies]
prost-build = { version = "0.12.3" }
